--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="shortcut icon" href="/img/favicon.ico"/>
 
         <!-- FontAwesome Icons -->
-        <link rel="stylesheet" href="/css/font-awesome/css/all.css">
+        <link rel="stylesheet" href="/css/font-awesome/css/font-awesome.min.css">
 
         <!-- Bootstrap CSS-->
         <link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css">
@@ -24,34 +24,152 @@
         <!-- FONTS -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800" rel="stylesheet">
     </head>
-
-
     <body>
         <!-- ================================================ -->
         <!--                     HOME SECTION                 -->
         <!-- ================================================ -->
-        <section>
-            <div id="home">
-                <div id="home-cover" class="parallax animated fadeIn">
-                    <div id="home-content">
-                        <div id="home-inner-content" class="text-center">
-                            <div id="heading" class="animated zoomIn">
-                                <h2>Search in City</h2>
-                                <h4>----Tagline----</h4>
+        <section id="home">
+            <div id="home-cover" class="parallax animated fadeIn">
+                <div id="home-content">
+                    <div id="home-inner-content" class="text-center">
+                        <div id="heading" class="animated zoomIn">
+                            <h2>Search in City</h2>
+                            <h4>----Tagline----</h4>
+                        </div>
+                        <div id="home-btn" class="animated zoomIn">
+                            <a href="#" class="btn btn-lg btn-general btn-sradius">Work</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- ================================================ -->
+        <!--                   SERVICES SECTION               -->
+        <!-- ================================================ -->
+        <section id="services">
+            <div class="content-box">
+                <div class="content-title wow fadeInDown" data-wow-duration=".5s" data-wow-delay=".1s">
+                    <h3>SERVICES</h3>
+                    <div class="content-title-underline"></div>
+                </div>
+                <div class="container wow fadeInUp">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="services-item">
+                                <div class="services-item-icon">
+                                    <i class="fa fa-laptop fa-3x"></i>
+                                </div>
+                                <div class="services-item-title">
+                                    <h4>Web Development</h4>
+                                </div>
+                                <div class="services-item-content">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                                </div>
                             </div>
-                            <div id="home-btn" class="animated zoomIn">
-                                <a href="#" class="btn btn-lg btn-general btn-sradius">Work</a>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="services-item">
+                                <div class="services-item-icon">
+                                    <i class="fa fa-mobile fa-4x"></i>
+                                </div>
+                                <div class="services-item-title">
+                                    <h4>Mobile Apps</h4>
+                                </div>
+                                <div class="services-item-content">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="services-item">
+                                <div class="services-item-icon">
+                                    <i class="fa fa-search fa-3x"></i>
+                                </div>
+                                <div class="services-item-title">
+                                    <h4>SEO Optimization</h4>
+                                </div>
+                                <div class="services-item-content">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="services-item">
+                                <div class="services-item-icon">
+                                    <i class="fa fa-cloud fa-3x"></i>
+                                </div>
+                                <div class="services-item-title">
+                                    <h4>Cloud Services</h4>
+                                </div>
+                                <div class="services-item-content">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="services-item">
+                                <div class="services-item-icon">
+                                    <i class="fa fa-pencil-square-o fa-3x"></i>
+                                </div>
+                                <div class="services-item-title">
+                                    <h4>UX Design</h4>
+                                </div>
+                                <div class="services-item-content">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="services-item">
+                                <div class="services-item-icon">
+                                    <i class="fa fa-support fa-3x"></i>
+                                </div>
+                                <div class="services-item-title">
+                                    <h4>Support</h4>
+                                </div>
+                                <div class="services-item-content">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- ================================================ -->
-        <!--                   SERVICES SECTION               -->
-        <!-- ================================================ -->
-        <section>
 
+
+        <!-- ================================================ -->
+        <!--                    ABOUT SECTION                 -->
+        <!-- ================================================ -->
+        <section id="about">
+            <div id="about-bg-diagonal" class="parallax"></div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div id="about-content-box">
+                                <div id="about-content-box-outer">
+                                    <div id="about-content-box-inner">
+                                        <div class="content-title wow fadeInDown" data-wow-duration=".5s" data-wow-delay=".1s">
+                                            <h3>ABOUT</h3>
+                                            <div class="content-title-underline"></div>
+                                        </div>
+                                        <div class="about-content-desc wow fadeInUp">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                                Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                                laboris nisi ut aliquip ex ea commodo consequat.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </section>
     </body>
 
@@ -65,7 +183,9 @@
         <!-- Bootstrap JS -->
     <script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
 
+        <!-- WOW JS -->
+    <script type="text/javascript" src="js/wowjs/wow.min.js"></script>
+
         <!-- JS -->
     <script type="text/javascript" src="js/script.js"></script>
-
 </html>
